--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,14 +1,4 @@
-/* @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.weather-app {
+  margin: 5%;
+  font-family: Arial, Helvetica, sans-serif;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
