--- a/src/styles/ForecastSummary.css
+++ b/src/styles/ForecastSummary.css
@@ -1,8 +1,55 @@
-.forecast-summary__details button {
-  text-decoration: underline;
-  font-size: 9px;
+.forecast-summary {
+  border-radius: 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 10px 5px;
+  background-color: rgba(255,255,255,0.7);
+  font-size: 0.8rem;
+  width: 16%;
+  text-align: center;
 }
 
-.forecast-summary {
-  line-height: 1.5;
+.forecast-summary > button {
+  border: none;
+  font-size: 0.75rem;
+  padding: 0px;
+  margin: 5px;
+  background-color: rgba(255,255,255, 0);
+  font-family: "Montserrat", sans-serif;
+  outline: none;
+  cursor: pointer;
+}
+
+.forecast-summary > div {
+  margin: 3px;
+}
+
+.forecast-summary__icon {
+  font-size: 35px;
+  padding: 8px;
+}
+
+@media only screen and (max-width: 750px) {
+  .forecast-summary {
+      width: 16%;
+      padding: 5px 4px;
+  }
+  
+  .forecast-summary > button {
+      font-size: 0.5rem;
+      padding: 0px;
+      margin: 5px;
+  }
+  
+  .forecast-summary > div {
+      margin: 3px;
+      padding: 0px;
+  }
+  
+  .forecast-summary__icon {
+      font-size: 20px;
+      padding: 5px;
+  }
 }
